<resources>
    <string name="app_name">QuanLyKhachSan</string>
    <string name="login_title">Xin chào, hãy đăng nhập và quản lý khách sạn của bạn</string>
    <string name="hint_username">Tên đăng nhập</string>
    <string name="hint_password">Mật khẩu</string>
    <string name="action_login">Đăng Nhập !</string>
    <string name="top_bar_title">Đăng nhập và quản lý khách sạn của bạn</string>

    <string name="nav_home">Trang Chủ</string>
    <string name="nav_stat">Báo Cáo</string>
    <string name="nav_book">Đặt Phòng</string>
    <string name="nav_checkout">Trả Phòng</string>
    <string name="nav_room">Quản Lý Phòng</string>
    <string name="nav_room_type">Quản Lý Loại Phòng</string>
    <string name="nav_staff">Quản Lý Nhân Viên</string>
    <string name="tenloaiphong">Tên loại phòng</string>

    <string name="status_icon">Biểu tượng trạng thái phòng</string>
    <string name="no_data">Không có dữ liệu</string>
</resources>