<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- Đổi kích thước các icon ở styles.xml -->
    <!-- TOP BAR -->
    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/topBar"
        android:layout_width="0dp"
        android:layout_height="56dp"

        android:background="@color/teal_500"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/sideNav"
        app:layout_constraintTop_toTopOf="parent"
        app:menu="@menu/top_bar_menu"
        app:title=""
        app:titleTextColor="@android:color/white" />

    <!-- SIDE NAVIGATION (teal_900) -->
    <LinearLayout
        android:id="@+id/sideNav"
        android:layout_width="@dimen/side_nav_collapsed"
        android:layout_height="0dp"
        android:background="@color/teal_900"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <!-- Open / Close -->
        <ImageButton
            android:id="@+id/itemMenu"
            style="@style/SideNavIcon"
            android:layout_width="wrap_content"
            android:layout_height="75dp"
            android:layout_gravity="end"
            android:layout_marginEnd="20dp"
            android:scaleType="centerInside"
            android:src="@drawable/ic_dashboard_manage" />

        <!-- Trang Chủ -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/itemDashboard"
                style="@style/SideNavIcon"
                android:layout_width="75dp"
                android:src="@drawable/ic_allroom" />

            <Button
                android:id="@+id/btnDashboard"
                style="@style/SideNavLabel"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/nav_home"
                android:gravity="center_vertical"
                android:background="?attr/selectableItemBackground"
                android:textAllCaps="false" />
        </LinearLayout>

        <!-- Báo Cáo -->
        <LinearLayout android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/itemStatistic"
                style="@style/SideNavIcon"
                android:layout_width="75dp"
                android:src="@drawable/ic_bar_chart" />

            <Button
                style="@style/SideNavLabel"
                android:gravity="center_vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/nav_stat" />
        </LinearLayout>

        <!-- Trả Phòng -->
        <LinearLayout android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageButton
                android:id="@+id/itemCheckout"
                style="@style/SideNavIcon"
                android:layout_width="75dp"
                android:src="@drawable/ic_payment"/>
            <Button
                style="@style/SideNavLabel"
                android:gravity="center_vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/nav_checkout"/>
        </LinearLayout>

        <!-- ĐẶT PHÒNG -->
        <LinearLayout android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageButton
                android:id="@+id/itemBook"
                style="@style/SideNavIcon"
                android:layout_width="75dp"
                android:src="@drawable/ic_book_room"/>
            <Button
                style="@style/SideNavLabel"
                android:gravity="center_vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/nav_book"/>
        </LinearLayout>

        <!-- QUẢN LÝ PHÒNG -->
        <LinearLayout android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageButton
                android:id="@+id/itemRoom"
                style="@style/SideNavIcon"
                android:layout_width="75dp"
                android:src="@drawable/ic_manage_room"/>
            <Button
                style="@style/SideNavLabel"
                android:gravity="center_vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/nav_room"/>
        </LinearLayout>


        <!-- QUẢN LÝ LOẠI PHÒNG -->
        <LinearLayout android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageButton
                android:id="@+id/itemRoomType"
                style="@style/SideNavIcon"
                android:layout_width="75dp"
                android:src="@drawable/ic_manage_room_type"/>
            <Button
                style="@style/SideNavLabel"
                android:gravity="center_vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/nav_room_type"/>
        </LinearLayout>


        <!-- NHÂN VIÊN -->
        <LinearLayout android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageButton
                android:id="@+id/itemStaff"
                style="@style/SideNavIcon"
                android:layout_width="75dp"
                android:src="@drawable/ic_staffs"/>
            <Button
                style="@style/SideNavLabel"
                android:gravity="center_vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/nav_staff"/>
        </LinearLayout>

    </LinearLayout>

    <!-- MAIN CONTENT HOST -->
    <FrameLayout
        android:id="@+id/container"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/sideNav"
        app:layout_constraintTop_toBottomOf="@+id/topBar"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>
